--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
   <div class="container">
     <div class="header">
@@ -18,11 +19,11 @@
 
     <div class="location-not-found">
       <h1>Soryy, Location not found!!!</h1>
-      <img src="/assets/404.png" alt="404 Error">
+      <img src="./assets/404.png" alt="404 Error">
     </div>
 
     <div class="weather-body">
-      <img src="/assets/cloud.png" alt="Weather Image" class="weather-img">
+      <img src="./assets/cloud.png" alt="Weather Image" class="weather-img">
 
       <div class="weather-box">
         <p class="temperature">0 <sup>°C</sup></p>
@@ -51,5 +52,6 @@
   
   <script src="app.js"></script>
   <script src="config.js"></script>
+
 </body>
 </html>
